bdt/stylesheets/styles.css
@font-face {
  font-family: "DejaVuSans";
  src: url("https://pdf-template-generation.s3.ap-south-1.amazonaws.com/assess/fonts/DejaVuSansCondensed.ttf")
    format("truetype");
}

@font-face {
  font-family: "DejaVuSans-bold";
  src: url("https://pdf-template-generation.s3.ap-south-1.amazonaws.com/assess/fonts/DejaVuSansCondensed-Bold.ttf")
    format("truetype");
}

/* Elements */
body {
  width: 868px;
  margin: 0px;
  color: white;
  font-family: "DejaVuSans";
}
p {
  margin: 0px;
}
section {
  background: url(https://dx5zlk5th4g9t.cloudfront.net/bdt2.0-assets/background.png);
  background-size: cover;
  min-height: 1200px;
  padding: 20px 40px;
}

/* Text */
.title {
  font-size: 54px;
  font-weight: bold;
  margin: 0px;
}
.scoreText {
  position: absolute;
  top: -24px;
  color: rgba(255, 255, 255, 0.8);
  font-size: 14px;
}

.subtitle {
  font-size: 40px;
  font-weight: bold;
  margin: 0px;
}
.subtitle-2 {
  font-size: 32px;
  font-weight: bold;
  margin: 5px 0px;
}

.description {
  font-size: 18px;
  margin: 0px;
}
.smallDescription {
  font-size: 14px;
}

.description-2 {
  font-size: 20px;
}

.boldText1 {
  font-size: 24px;
  font-weight: bold;
  margin: 10px 0px;
}

.scoreTitle {
  padding-bottom: 4px;
  border-bottom: 1px solid white;
}

/* Flex */
.justifyCenter {
  display: flex;
  justify-content: center;
}
.alignCenter {
  display: flex;
  align-items: center;
}
.spaceBetween {
  display: flex;
  justify-content: space-between;
}
.spaceAround {
  display: flex;
  justify-content: space-around;
}
.alignLeft {
  display: flex;
  align-items: left;
}
.centerAlign {
  text-align: center;
}
.justifyRight {
  display: flex;
  justify-content: right;
}

.divider {
  height: 2px;
  background-color: white;
  border-radius: 200;
  width: 90%;
  margin: 20px 30px;
  opacity: 0.4;
}
.flexDirectionRow {
  display: flex;
  flex-direction: row;
}
.flexDirectionCol {
  display: flex;
  flex-direction: column;
}
.mt20 {
  margin-top: 20px;
}
.mt40 {
  margin-top: 40px;
}

/* Banners */
.banner {
  background: linear-gradient(180deg, #8a4493 0%, rgb(93 51 134) 100%);
  padding: 30px;
  border-radius: 30px;
  margin: 20px 100px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.callout {
  background: linear-gradient(180deg, #8a4493 0%, rgb(93 51 134) 100%);
  padding: 30px;
  border-radius: 30px;
  margin: 30px 40px;
}

.hornImage {
  width: 60px;
  margin-right: 30px;
}

.card {
  min-height: 200px;
  min-width: 200px;
  text-align: center;
  padding: 30px;
  display: inline-block;
  background-color: #645184;
  border-radius: 20px;
  margin-top: 30px;
}
.card-v2 {
  min-height: 150px;
  min-width: 120px;
  text-align: center;
  padding: 32px 20px 20px;
  display: inline-block;
  background-color: #645184;
  border-radius: 12px;
  color: rgba(255, 255, 255, 0.7);
}
.card-divider {
  margin: 12px;
  background-color: white;
  width: 90%;
  opacity: 0.4;
}

.cardImage {
  width: 100px;
}
.ml40 {
  margin-left: 40px;
}
.mt5 {
  margin-top: 5px;
}
.ml25 {
  margin-left: 25px;
}
.subtitle-2 {
  font-size: 27px;
  font-weight: bold;
  margin: 0px;
}
.title-underline {
  width: 75%;
  padding: 1px;
  background-color: rgb(144, 89, 167);
  margin-top: 6px;
}
.title-adjustment {
  padding: 40px 0px 0px 40px;
}
.title-underline-adjustment {
  margin: 6px 0px 0px 40px;
}
.description-container {
  width: 67%;
  margin: 70px 0px 0px 145px;
  height: 700px;
}
.content-container {
  width: 85%;
  height: 800px;
}
.unit-container {
  width: 100%;
}
.last-page-content-container {
  width: 90%;
  height: 850px;
}
.bg-transparent-50 {
  background: rgba(255, 255, 255, 0.5);
}

/* Grid */
.grid-container {
  display: grid;
  grid-template-columns: repeat(12, 1fr);
  grid-template-rows: 1fr;
  grid-column-gap: 16px;
  grid-row-gap: 0px;
  height: fit-content;
  align-items: center;
}

.grid-child-subject {
  grid-area: 1 / 1 / 2 / 3;
  text-align: right;
  color: rgba(255, 255, 255, 0.5);
}
.grid-child-range {
  grid-area: 1 / 3 / 2 / 12;
  display: flex;
  align-items: center;
  position: relative;
}
.grid-child-score {
  grid-area: 1 / 12 / 2 / 12;
  text-align: center;
}

.unit-details-container {
  width: 70%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

/* Range */
.rangeContainer {
  width: 100%;
  height: 10px;
  border-radius: 20px;
  background-color: white;
  opacity: 0.2;
  position: absolute;
}
.rangeChild {
  position: absolute;
  width: 40%;
  height: 6px;
  padding: 2px;
  border-radius: 20px;
  z-index: 20;
}

.rangePoor {
  background: linear-gradient(180deg, #e99752 0%, #e06b39 100%);
}
.rangeOkay {
  background: linear-gradient(180deg, #fec936 0%, #f9a31d 100%);
}
.rangeGood {
  background: linear-gradient(180deg, #4ba279 0%, #67bb69 100%);
}

.infoContainer {
  margin-top: 60px;
}

/* Donut */
.donutContainer {
  position: relative;
  float: left;
  text-align: center;
  margin: 40px;
}

svg {
  transform: rotate(-90deg);
}

svg text {
  text-anchor: middle;
  dominant-baseline: middle;
}

.donut {
  stroke-dasharray: 440;
}

.svgText {
  font-size: 40px;
  transform: rotate(90deg);
}

.groupRotate {
  transform: rotate(0deg);
}

